--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "joi": "^9.0.4",
     "lodash": "^4.17.4",
     "no-kafka": "^3.2.4",
-    "tc-core-library-js": "appirio-tech/tc-core-library-js.git#feature/m2mtoken",
+    "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6",
     "topcoder-healthcheck-dropin": "^1.0.3",
     "uuid": "^3.3.2",
     "winston": "^2.2.0"
