--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
     environment:
       DEPLOY_ENV: "DEV"
       LOGICAL_ENV: "dev"
-      APPNAME: "challenge-api"    
+      APPNAME: "aggregate-scorer"    
     steps: *builddeploy_steps
 
   "build-prod":
@@ -54,7 +54,7 @@ jobs:
     environment:
       DEPLOY_ENV: "PROD"
       LOGICAL_ENV: "prod"    
-      APPNAME: "challenge-api"  
+      APPNAME: "aggregate-scorer"  
     steps: *builddeploy_steps
 
 workflows:
