--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 # Use the base image with Node.js
-FROM node:latest
+FROM node:16.20.1-buster
 
 # Copy the current directory into the Docker image
 COPY . /aggregate-scorer
@@ -8,4 +8,4 @@ WORKDIR /aggregate-scorer
 
 # Install the dependencies from package.json
 RUN npm install
-CMD npm start
+CMD node src/app.js
